src/test/compile-fail/attr-before-view-item.rs
// xfail-stage0
// error-pattern:expected item

#[foo = "bar"]
use std;

fn main() {
}
